# DocPilot

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.cpu  Dockerfile.gpu  README.md  SECURITY_AUDIT.md  docker-compose.yml  download_models.py  gradio_app.py  main.py  openapi.json  pyproject.toml
common/: __init__.py  async_tasks.py  audit_log.py  branding.py  build_info.py  config_utils.py  constants.py  errors.py  file_utils.py  gpu_page_pool.py  gradio_temp.py  ingest_postgres.py  ingest_publisher.py  log.py  markdown_utils.py  metrics.py  misc_utils.py  model_store.py  parse_artifacts.py  parse_builders.py  ratelimit.py  retention_janitor.py  self_check.py  setting.py  task_callbacks.py  token_utils.py  tracing.py
common/nlp/: __init__.py  tokenizer.py
deepdoc/: README.md  README_zh.md
deepdoc/parser/: __init__.py  caj_parser.py  csv_parser.py  docling_parser.py  docx_parser.py  email_parser.py  epub_parser.py  excel_parser.py  html_parser.py  json_parser.py  markdown_parser.py  markitdown_parser.py  mineru_parser.py  odt_parser.py  paddleocr_parser.py  pdf_hybrid_router.py  pdf_parser.py  ppt_parser.py  rtf_parser.py  tcadp_parser.py  txt_parser.py  utils.py
deepdoc/vision/: __init__.py  barcode.py  formula_recognizer.py  layout_recognizer.py  ocr.py  operators.py  rapid_table_recognizer.py  recognizer.py  seal_recognizer.py  seeit.py  t_ocr.py  t_recognizer.py  t_table.py  table_structure_recognizer.py
docker/: entrypoint.sh
docs/: API.md  DEPLOYMENT.md  EVALUATION.md  OPERATIONS.md  PARSER_ENGINE_STRATEGY.md
docs/plans/: 2026-06-11-gpu-hybrid-pdf-routing.md
plans/: 2026-06-06-unified-model-hub-and-parser-cleanup.md  2026-06-08-deepdoc-cpu-pipeline-upgrade.md  optimization-roadmap.md
templates/: pdf_compare.html
tests/: test_api_boundary.py  test_artifact_quality_report.py  test_caj_parser.py  test_cpu_pipeline_upgrade.py  test_csv_parser.py  test_docker_image_variants.py  test_email_parser.py  test_epub_parser.py  test_error_response.py  test_gpu_hybrid_execution.py  test_gradio_task_log_restore.py  test_gradio_temp.py  test_handwriting_fallback.py  test_image_parse.py  test_layout_dynamic_batching.py  test_lightweight_smoke.py  test_model_cache.py  test_model_store.py  test_model_warmup.py  test_multitenancy.py  test_operational_surfaces.py  test_parse_artifacts.py  test_pdf_cross_page_merge.py  test_pdf_hybrid_routing.py  test_pdf_native_detection.py  test_pdf_parser_singletons.py  test_quantization.py  test_rapid_table_recognizer.py  test_rec_dynamic_batching.py  test_request_protection.py  test_rtf_odt_parser.py  test_structured_logging.py  test_tensorrt_provider.py
tools/: bench_hybrid_pdf.py  check_cpu_pipeline_readiness.py  eval_omnidocbench.py  eval_table.py  pdf_to_markdown.py  profile_pipeline.py  publish_models_to_hf.py  quantize_models.py
tools/ci/: artifact_export_smoke.py  artifact_quality_report.py  create_placeholder_models.py  full_api_smoke.py  (+3 more)
(+5 files in other folders)
