[project]
name = "deepdoc"
version = "0.1.0"
description = "Document parsing and structured artifact service"
readme = "deepdoc/README.md"
requires-python = ">=3.10,<3.13"
license = {text = "Apache-2.0"}
authors = [{name = "InfiniFlow", email = "contact@infiniflow.com"}]
dependencies = [
    # ===== 核心计算 =====
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.5.0,<2.0.0",
    "xgboost==1.6.0",

    # ===== 计算机视觉 & OCR =====
    "opencv-python-headless==4.10.0.84",
    "onnxruntime==1.23.2",
    "pillow>=10.4.0,<13.0.0",
    "pyclipper>=1.4.0,<2.0.0",
    "shapely>=2.0.5,<3.0.0",

    # ===== 文档解析 =====
    "pdfplumber==0.10.4",
    "pymupdf>=1.24.9,<2.0.0",
    "pypdf>=6.6.2",
    "python-docx>=1.1.2,<2.0.0",
    "python-pptx>=1.0.2,<2.0.0",
    "openpyxl>=3.1.0,<4.0.0",
    "xlrd",
    "markdown==3.6",
    "markitdown[docx,pptx,xlsx,xls]>=0.1.6",
    "tika==2.6.0",

    # ===== NLP & 文本处理 =====
    "tiktoken>=0.7.0,<1.0.0",
    "xpinyin>=0.7.6,<0.8.0",
    "demjson3==3.0.6",

    # ===== Web 服务 =====
    "flask",
    "flask-cors>=6.0.0,<7.0.0",
    "flask-swagger-ui>=5.32.6,<6.0.0",
    "gevent",
    "prometheus-client>=0.20.0,<1.0.0",
    "opentelemetry-api>=1.27.0,<2.0.0",
    "opentelemetry-sdk>=1.27.0,<2.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0,<2.0.0",
    "opentelemetry-instrumentation-botocore>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-flask>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-psycopg>=0.48b0,<1.0.0",
    "opentelemetry-instrumentation-requests>=0.48b0,<1.0.0",
    # ===== 工具库 =====
    "beautifulsoup4",
    "chardet",
    "pydantic>=2.8.0,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "redis>=5.1.0,<6.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "ruamel-yaml>=0.18.6,<0.19.0",
    "six>=1.16.0,<2.0.0",
    "huggingface-hub",
    "filelock",
    "setuptools<81",  # xgboost 1.6.0 需要 pkg_resources，setuptools>=82 已移除该模块

    # ===== 类型 & 枚举 =====
    "beartype>=0.20.0,<1.0.0",
    "strenum==0.4.15",

    # ===== 可选：腾讯云文档解析 (tcadp_parser) =====
    "tencentcloud-sdk-python==3.0.1478",
]

[project.optional-dependencies]
gpu = [
    "onnxruntime-gpu==1.23.2",
]
gradio = [
    "gradio>=5.49.1,!=6.0.0,!=6.0.1,!=6.0.2,!=6.1.0,!=6.2.0,!=6.3.0,!=6.4.0,!=6.5.0,!=6.5.1,!=6.6.0,!=6.7.0,<6.9.0",
    "gradio-pdf>=0.0.22",
]
formula = [
    "rapid_latex_ocr>=0.0.9",
]
formula-v2 = [
    "paddlex>=3.0.0,<4.0.0",
]
table = [
    # 纯 ONNX/CPU 表格识别（SLANet-plus）；未安装时 rapidtable 引擎自动回退 TATR。
    # 版本以支持 SLANet-plus ONNX 推理的版本为准（见 plan Task 0 探针）。
    "rapid-table>=1.0.0",
]
artifact-s3 = [
    "boto3>=1.35.0,<2.0.0",
]
ingest-postgres = [
    "psycopg[binary]>=3.2.0,<4.0.0",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["deepdoc*", "common*"]
